--- a/src/main/resources/templates/deptnotice/deptnoticeread.html
+++ b/src/main/resources/templates/deptnotice/deptnoticeread.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Title</title>
+    <title>부서알림 상세보기</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -16,13 +16,12 @@
 <!-- ======= main ======= -->
 <main id="main" class="main">
     <div class="pagetitle">
-        <h1>페이지제목</h1>
+        <h1>부서알림 공지사항</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">메인</a></li>
-                <li class="breadcrumb-item">경로1</li>
-                <li class="breadcrumb-item">경로2</li>
-                <li class="breadcrumb-item active">페이지제목</li>
+                <li class="breadcrumb-item">메인</li>
+                <li class="breadcrumb-item">공지사항</li>
+                <li class="breadcrumb-item active" th:text="${deptnotice.deptNoticeTitle}"></li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -35,38 +34,46 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">상세보기</h5>
+                        <h5 class="card-title">부서 알림 상세보기</h5>
 
-                        <!-- General Form Elements -->
-                        <form>
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">번호</label>
                                 <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label">1</label>
+                                    <label class="col-sm-2 col-form-label">
+                                        <div th:text="${deptnotice.deptNoticeNumber}"></div></label>
                                 </div>
                             </div>
-                            <form>
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">생산부서 김길동</label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${deptnotice.deptNoticeWriter}"></div></label>
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">생산부서 생산 요청 완료</label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${deptnotice.deptNoticeTitle}"></div></label>
                                     </div>
                                 </div>
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">2024-07-20</label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${deptnotice.deptNoticeRegDate}"></div></label>
                                     </div>
                                 </div>
 
-
+                                <div class="row mb-3">
+                                    <label class="col-sm-2 col-form-label">수정일</label>
+                                    <div class="col-sm-10">
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${deptnotice.deptNoticeUpdateDate}"></div></label>
+                                    </div>
+                                </div>
 
                                 <!-- End Quill Editor Full -->
 
@@ -79,34 +86,9 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">생산부서 생산 요청 완료</h5>
+                        <h5 class="card-title" th:text="${deptnotice.deptNoticeTitle}"></h5>
 
-
-                        <p>수정내용</p>
-                        <pre>              &nbsp;① 구매품의서의 작성
-                                - 구매품의서
-                                구매품의서는 수요부서에서 작성하여 회계부서의 예산담당자를 거친 후, 부서장의 결재를 받아 구매담당부서에 제출한다.
-                                예정가격이 일정금액을 초과할 경우, 수요부서에서 결재 받은 품의서 사본을 첨부해야 한다.
-                                수요부서는 구매품의서 작성 시 품명, 규격, 수량, 단가 등을 기재해야 하며, 구매담당부서에서 요구 시 용도, 입출고 및 재고상황 등을 제시해야 한다.
-                                견적서, 사양서, 카탈로그, 참고사항 등을 첨부해야 한다.
-                                구매 품의부서는 구매신청서를 작성하여 구매부서에 신청해야 한다.
-
-                                - 구매요령
-                                일정금액을 초과하는 품목의 구매는 수요부서에서 구매담당부서로 구매품의서를 제출해야 하며, 구매담당부서에서는 구매절차에 따라 물품을 구매, 조달해야 한다.
-                                구매담당 부서장은 능률적인 구매와 조달을 위해 공급업자를 선정하여 주요품목에 대하여 단가계약을 할 수 있으며, 이 경우 구매담당 부서장은 일정기간을 정하여 정기적으로 또는 수시로 단가액을 조정해야 하고, 업자의 선정 및 단가의 확정, 조정사항은 사장의 최종 승인을 받아야 한다.
-
-                                - 구매품의서의 수리
-                                구매담당부서는 구매품의서의 기재내용을 검토 후 적정하다고 인정하는 것을 수리한다.
-                                구매품의서의 사양과 동일한 물품의 구매가 곤란한 경우는 구매부서와 협의하여 구매품의서의 내용을 정정 또는 변경할 수 있다.
-                                물품구입 예정가격이 일정금액 이하인 경우에는 전결로 집행한다.
-
-                                ② 구매목적
-                                구매의 필요성과 이유를 간략하게 기재한다. 이 때 내용이 많고 상세설명이 필요한 경우에는 별지로 작성하도록 한다.
-                                구매의 목적이 명확하게 기재되어 있지 않으면 승인을 받지 못할 수 있으므로 주의해야 한다.
-
-                                ③ 납품일
-                                구매는 회사의 제조ㆍ서비스ㆍ판매활동 등에 필요한 자재, 원료, 물품, 상품 등을 구입하는 것이므로 업무 진행에 차질이 없도록 정해진 납품기일을 준수해야 한다.</pre>
-
+                        <pre th:text="${deptnotice.deptNoticeContent}"></pre>
                     </div>
                 </div>
 
@@ -114,12 +96,14 @@
 
             <div class="row mb-12">
                 <div class="col-sm-10">
-                    <a href="공지사항2더미수정.html"><button type="button" class="btn btn-primary">수정</button></a>
-                    <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
-                    <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
+                    <a th:href="@{/deptnotice/deptnoticemodify(deptNoticeNumber=${deptnotice.deptNoticeNumber})}" class="deptmodify">
+                        <button type="button" class="btn btn-primary">수정</button></a>
+                    <a th:href="@{/deptnotice/deptnoticedelete(deptNoticeNumber=${deptnotice.deptNoticeNumber})}" class="list">
+                        <button type="button" class="btn btn-danger">삭제</button></a>
+                    <a href="/notice/noticelist" class="list"><button type="button" class="btn btn-primary">목록</button></a>
                 </div>
             </div>
-            </form><!-- End General Form Elements -->
+            <!-- End General Form Elements -->
 
         </div>
         </div>
