--- a/src/main/resources/templates/Notice/noticemodify.html
+++ b/src/main/resources/templates/Notice/noticemodify.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Title</title>
+    <title>공지사항 수정</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -16,13 +16,12 @@
 <!-- ======= main ======= -->
 <main id="main" class="main">
     <div class="pagetitle">
-        <h1>페이지제목</h1>
+        <h1>공지사항</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">메인</a></li>
-                <li class="breadcrumb-item">경로1</li>
-                <li class="breadcrumb-item">경로2</li>
-                <li class="breadcrumb-item active">페이지제목</li>
+                <li class="breadcrumb-item">메인</li>
+                <li class="breadcrumb-item">공지사항</li>
+                <li class="breadcrumb-item" th:text="${notice.noticeTitle}"></li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -35,89 +34,93 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">상세보기</h5>
+                        <h5 class="card-title">공지사항 수정</h5>
 
                         <!-- General Form Elements -->
-                        <form>
+                        <form th:action="@{/notice/noticemodify(noticeNumber=${notice.noticeNumber})}"
+                              method="post">
+
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">번호</label>
                                 <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label">1</label>
+                                    <input type="text" class="form-control" name="noticeNumber"
+                                           th:value="${notice.noticeNumber}" readonly>
                                 </div>
                             </div>
-                            <form>
-                                <div class="row mb-3">
-                                    <label class="col-sm-2 col-form-label">작성자</label>
-                                    <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">관리자</label>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">작성자</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="noticeWriter"
+                                           th:value="${notice.noticeWriter}" readonly>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">제목</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="noticeTitle" th:value="${notice.noticeTitle}">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">작성일</label>
+                                <div class="col-sm-10">
+                                    <input type="date" class="form-control" name="noticeRegDate"
+                                           th:value="${notice.noticeRegDate}" readonly>
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">수정일</label>
+                                <div class="col-sm-10">
+                                    <input type="date" class="form-control" name="noticeUpdateDate" id="currentDate">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">본문 내용</label>
+                                <div class="col-lg-12">
+
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <textarea class="tinymce-editor" name="noticeContent"
+                                                      id="text1" th:text="${notice.noticeContent}"></textarea>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <div class="row mb-3">
-                                    <label class="col-sm-2 col-form-label">제목</label>
-                                    <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">※ 여름휴가공지 ※</label>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <label class="col-sm-2 col-form-label">작성일</label>
-                                    <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label">2024-07-22</label>
-                                    </div>
-                                </div>
-
-
-                                <div class="row mb-3">
-                                    <label class="col-sm-2 col-form-label">본문 내용</label>
-                                    <!-- End Quill Editor Full -->
 
                                 </div>
-                            </form></form></div>
+                            </div>
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">수정</button>
+                            </div>
+                        </form></div>
 
                 </div>
 
-                <div class="col-lg-12">
+                <!-- End General Form Elements -->
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">TinyMCE Editor</h5>
+                <script>
+                    document.getElementById('currentDate').value = new Date().toISOString().substring(0, 10);;
+                </script>
 
-                            <!-- TinyMCE Editor -->
-                            <textarea class="tinymce-editor">
-                <p>SUMMER VACATION</p>
-                <p> 여름 휴가 공지
-
-                    (주) 정감을 아껴주시고 찾아주시는 고객님들께 알려드립니다.
-
-
-
-                    무더운 여름을 맞아 아래와 같은 일정으로 하계휴가를 실시합니다.
-
-                    재충전후 더 좋은 모습으로 찾아뵙겠습니다.</p>
-              </textarea><!-- End TinyMCE Editor -->
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row mb-12">
-                    <div class="col-sm-10">
-                        <a href="공지사항1더미.html"><button type="button" class="btn btn-primary">완료</button></a>
-                        <a href=""><button type="button" class="btn btn-danger">삭제</button></a>
-                        <a href="공지사항.html"><button type="button" class="btn btn-primary">조회</button></a>
-                    </div>
-                </div>
-                </form><!-- End General Form Elements -->
+                <script>
+                    const text1 = document.getElementById("text1");
+                    text1.addEventListener("keyup", (event) => {
+                        text1.value = txt.replace(/(<([^>]+)>)/ig, "");
+                    });
+                </script>
 
             </div>
         </div>
 
         </div>
-        </div> <!--End row-->
+
+
+        </div>
     </section>
-</main>
-<!-- End #main -->
+
+</main><!-- End #main -->
 <th:block th:replace="~{/fragments/bodyFragment::footer}"></th:block>
 <th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
 </body>
