--- a/src/main/resources/templates/Notice/noticeread.html
+++ b/src/main/resources/templates/Notice/noticeread.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>전제공지상세보기</title>
+    <title>공지사항 상세보기</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -16,10 +16,10 @@
 <!-- ======= main ======= -->
 <main id="main" class="main">
     <div class="pagetitle">
-        <h1>전체 공지사항</h1>
+        <h1>공지사항</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">메인</a></li>
+                <li class="breadcrumb-item">메인</li>
                 <li class="breadcrumb-item">공지사항</li>
                 <li class="breadcrumb-item" th:text="${notice.noticeTitle}"></li>
             </ol>
@@ -34,36 +34,47 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">상세보기</h5>
+                        <h5 class="card-title">공지사항 상세보기</h5>
 
-                        <!-- General Form Elements -->
-<!--                        <form>-->
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">번호</label>
                                 <div class="col-sm-10">
-                                    <label class="col-sm-2 col-form-label" th:text="${notice.noticeNumber}"></label>
+                                    <label class="col-sm-2 col-form-label">
+                                        <div th:text="${notice.noticeNumber}"></div></label>
                                 </div>
                             </div>
-<!--                            <form>-->
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성자</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeWriter}"></label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${notice.noticeWriter}"></div></label>
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">제목</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeTitle}"></label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${notice.noticeTitle}"></div></label>
                                     </div>
                                 </div>
+
                                 <div class="row mb-3">
                                     <label class="col-sm-2 col-form-label">작성일</label>
                                     <div class="col-sm-10">
-                                        <label class="col-sm-2 col-form-label" th:text="${notice.noticeRegDate}"></label>
+                                        <label class="col-sm-2 col-form-label">
+                                            <div th:text="${notice.noticeRegDate}"></div></label>
                                     </div>
                                 </div>
+
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">수정일</label>
+                                <div class="col-sm-10">
+                                    <label class="col-sm-2 col-form-label">
+                                        <div th:text="${notice.noticeUpdateDate}"></div></label>
+                                </div>
+                            </div>
 
 
 
@@ -78,10 +89,10 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">본문내용</h5>
+                        <h5 class="card-title" th:text="${notice.noticeTitle}"></h5>
 
 
-                        <p th:text="${notice.noticeContent}"></p>
+                        <pre th:text="${notice.noticeContent}" id="text1"></pre>
 
                     </div>
                 </div>
@@ -90,12 +101,20 @@
 
             <div class="row mb-12">
                 <div class="col-sm-10">
-                    <a href="noticemodify"><button type="button" class="btn btn-primary">수정</button></a>
-                    <a href="">  <button type="button" class="btn btn-danger">삭제</button></a>
-                    <a href="공지사항.html"><button type="button" class="btn btn-primary">목록</button></a>
+                    <a th:href="@{/notice/noticemodify(noticeNumber=${notice.noticeNumber})}" class="modify">
+                        <button type="button" class="btn btn-primary">수정</button></a>
+                    <a th:href="@{/notice/noticedelete(noticeNumber=${notice.noticeNumber})}" class="list">
+                        <button type="button" class="btn btn-danger">삭제</button></a>
+                    <a href="noticelist" class="list"><button type="button" class="btn btn-primary">목록</button></a>
                 </div>
             </div>
-            </form><!-- End General Form Elements -->
+            <!-- End General Form Elements -->
+
+            <script>
+                const $el = document.querySelector(".tinymce-editor");
+
+                const newText = $el.innerHTML.replace(/<[^>]*>?/g, '');
+            </script>
 
         </div>
         </div>
